; ModuleID = '/home/carl/AnghaBench/git/extr_pkt-line.c_get_trace_prefix.c'
source_filename = "/home/carl/AnghaBench/git/extr_pkt-line.c_get_trace_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"sideband\00", align 1
@packet_trace_prefix = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_trace_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_trace_prefix() #0 {
  %1 = call i64 (...) @in_async()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %6

4:                                                ; preds = %0
  %5 = load i8*, i8** @packet_trace_prefix, align 8
  br label %6

6:                                                ; preds = %4, %3
  %7 = phi i8* [ getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), %3 ], [ %5, %4 ]
  ret i8* %7
}

declare dso_local i64 @in_async(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
